get movies by title
