# MoviesApi.Services/MovieService.cs
@@ -1,6 +1,8 @@
 using Microsoft.Extensions.Configuration;
+using MoviesDB.API.Swagger.Controllers.Generated;
 using MoviesDb.Services.Interfaces;
 using tmdb_api;
+using MovieResponse = tmdb_api.MovieResponse;
 
 
 namespace MoviesDb.Services;
@@ -19,5 +21,10 @@ public class MovieService : IMovieService
     public async Task<MovieResponse> GetMovieAsync(int movie_id, string language = "en_US")
     {
         return await _moviesClient.GetMovieAsync(movie_id, api_key, language);
+    }
+
+    public async Task<MoviesResponse> GetMoviesByTitleAsync(string movieName, string language = "en_US")
+    {
+        return await _moviesClient.GetMoviesByTitleAsync(api_key,movieName, null, language);
     }
 }
